--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.1
   flutter_dotenv: ^2.1.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
